# Auto_Warehouse_Robo

./: LICENSE  README.md
src/warehouse_robot/: CMakeLists.txt  package.xml
src/warehouse_robot/src/: warehouse_publisher_node.cpp  warehouse_subscriber_node.cpp
